@@ -1,3 +1,9 @@
+2007-10-22  dangelo
+
+	* src/enblend.cc: added --compression option to allow more
+	detailed specification of the compression type and quality
+	(especially for jpeg output)
+
 2007-10-14  dangelo
 
 	* src/enblend.cc: extended -f option to allow specification
